# home_inventory

./: .gitignore
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/upload/: upload-form.html  upload-form.ts
generator/: main.py  pyproject.toml
web/: .gitignore  app.py  pyproject.toml
web/nginx/: inventory.conf
web/systemd/: home_inventory.service
web/templates/: page.html
